build_errors.txt
cargo : warning: unused import: 
`Position`
At line:1 char:1
+ cargo check --package forge-app 2>&1 
| Out-File -FilePath "C:\Users\o ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecif 
   ied: (warning: unused import: `Posi  
  tion`:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCom 
   mandError
 
 --> 
crates\forge-core\src\buffer.rs:1:44
  |
1 | use crate::{Encoding, History, 
LineEnding, Position, Selection, 
Syntax, Transaction};
  |                                     
       ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on 
by default

warning: unused import: `StatusOptions`
 --> crates\forge-core\src\git.rs:1:32
  |
1 | use git2::{Repository, Status, 
StatusOptions};
  |                                
^^^^^^^^^^^^^

warning: unused import: `PathBuf`
 --> crates\forge-core\src\git.rs:2:23
  |
2 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^

warning: unused import: `anyhow::Result`
 --> crates\forge-core\src\git.rs:3:5
  |
3 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^

warning: unused import: 
`std::collections::HashMap`
 --> 
crates\forge-core\src\project.rs:2:5
  |
2 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: 
`CommandBuilder`, `NativePtySystem`, 
`PtyPair`, `PtySize`, and `PtySystem`
 --> 
crates\forge-core\src\terminal.rs:2:20
  |
2 | use portable_pty::{CommandBuilder, 
NativePtySystem, PtyPair, PtySize, 
PtySystem};
  |                    ^^^^^^^^^^^^^^  
^^^^^^^^^^^^^^^  ^^^^^^^  ^^^^^^^  
^^^^^^^^^

warning: unused imports: `Read` and 
`Write`
 --> 
crates\forge-core\src\terminal.rs:3:15
  |
3 | use std::io::{Read, Write};
  |               ^^^^  ^^^^^

warning: unused imports: `Arc` and 
`Mutex`
 --> 
crates\forge-core\src\terminal.rs:4:17
  |
4 | use std::sync::{Arc, Mutex};
  |                 ^^^  ^^^^^

warning: unused import: `std::thread`
 --> 
crates\forge-core\src\terminal.rs:5:5
  |
5 | use std::thread;
  |     ^^^^^^^^^^^

warning: unused variable: `cols`
  --> 
crates\forge-core\src\terminal.rs:17:16
   |
17 |     pub fn new(cols: u16, rows: 
u16) -> Result<Self> {
   |                ^^^^ help: if this 
is intentional, prefix it with an 
underscore: `_cols`
   |
   = note: `#[warn(unused_variables)]` 
on by default

warning: unused variable: `rows`
  --> 
crates\forge-core\src\terminal.rs:17:27
   |
17 |     pub fn new(cols: u16, rows: 
u16) -> Result<Self> {
   |                           ^^^^ 
help: if this is intentional, prefix it 
with an underscore: `_rows`

warning: unused variable: `data`
  --> 
crates\forge-core\src\terminal.rs:24:29
   |
24 |     pub fn write(&mut self, data: 
&str) -> Result<()> {
   |                             ^^^^ 
help: if this is intentional, prefix it 
with an underscore: `_data`

warning: unused variable: `cols`
  --> 
crates\forge-core\src\terminal.rs:28:30
   |
28 |     pub fn resize(&mut self, cols: 
u16, rows: u16) -> Result<()> {
   |                              ^^^^ 
help: if this is intentional, prefix it 
with an underscore: `_cols`

warning: unused variable: `rows`
  --> 
crates\forge-core\src\terminal.rs:28:41
   |
28 |     pub fn resize(&mut self, cols: 
u16, rows: u16) -> Result<()> {
   |                                    
     ^^^^ help: if this is intentional, 
prefix it with an underscore: `_rows`

warning: `forge-core` (lib) generated 
14 warnings (run `cargo fix --lib -p 
forge-core` to apply 9 suggestions)
warning: unused import: `SignalKind`
 --> crates\forge-confidence\src\engine.
rs:1:46
  |
1 | use 
crate::models::{ConfidenceScore, 
Signal, SignalKind};
  |                                     
         ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on 
by default

warning: `forge-confidence` (lib) 
generated 1 warning (run `cargo fix 
--lib -p forge-confidence` to apply 1 
suggestion)
    Checking forge-app v0.1.0 (C:\Users\
osaretin\Downloads\forge\crates\forge-ap
p)
warning: unused import: `Range`
 --> crates\forge-app\src\editor.rs:3:55
  |
3 | use forge_core::{Buffer, Change, 
ChangeSet, Position, Range, Selection, 
Transaction};
  |                                     
                  ^^^^^
  |
  = note: `#[warn(unused_imports)]` on 
by default

error[E0308]: mismatched types
   --> crates\forge-app\src\gpu.rs:22:44
    |
22  |           let instance = wgpu::Ins
tance::new(&wgpu::InstanceDescriptor {
    |  ________________________---------
----------_^
    | |                        |
    | |                        
arguments to this function are incorrect
23  | |             backends: 
wgpu::Backends::all(),
24  | |             ..Default::default()
25  | |         });
    | |_________^ expected 
`InstanceDescriptor`, found 
`&InstanceDescriptor`
    |
note: associated function defined here
   --> C:\Users\osaretin\.cargo\registry
\src\index.crates.io-1949cf8c6b5b557f\wg
pu-23.0.1\src\api\instance.rs:114:12
    |
114 |     pub fn new(_instance_desc: 
InstanceDescriptor) -> Self {
    |            ^^^
help: consider removing the borrow
    |
22  -         let instance = wgpu::Insta
nce::new(&wgpu::InstanceDescriptor {
22  +         let instance = wgpu::Insta
nce::new(wgpu::InstanceDescriptor {
    |

error[E0596]: cannot borrow 
`text_atlas` as mutable, as it is not 
declared as mutable
   --> crates\forge-app\src\application.
rs:108:13
    |
108 |             &mut text_atlas,
    |             ^^^^^^^^^^^^^^^ 
cannot borrow as mutable
    |
help: consider changing this to be 
mutable
    |
105 |         let mut text_atlas = 
TextAtlas::new(&gpu.device, &gpu.queue, 
&cache, gpu.format());
    |             +++

Some errors have detailed explanations: 
E0308, E0596.
For more information about an error, 
try `rustc --explain E0308`.
warning: `forge-app` (bin "forge") 
generated 1 warning
error: could not compile `forge-app` 
(bin "forge") due to 2 previous errors; 
1 warning emitted
